# dotcom

./: README.md  pyproject.toml  requirements.txt
content/2020/: the-drain-of-self-advocacy.md
content/me/: index.md
