[tool.poetry]
name = "dotcom"
version = "0.1.0"
description = ""
authors = ["Mattie <mattie@zigg.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "~3.7"
setuptools = "<58"
jinja2 = "<3"
markupsafe = "<2"
misaka = "<2"
liquidluck = "^3.8.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
